--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -50,10 +50,9 @@ jobs:
             --restart=always \
             --name registry \
             -v /tmp/docker-registry:/var/lib/registry \
-            registry:2 && \
-            npx wait-on tcp:5000
+            registry:2 &&  npx wait-on tcp:5000
 
-          docker pull localhost:5000/${imageName} || { \
+          docker pull localhost:5000/${imageName} || \
             docker buildx ls && \
             docker run --privileged --rm tonistiigi/binfmt --install all && \
             docker buildx build \
@@ -64,8 +63,7 @@ jobs:
               --platform ${BUILD_PLATFORM} \
               ci-docker && \
             docker tag $imageName localhost:5000/${imageName} && \
-            docker push localhost:5000/${imageName} \
-          }
+            docker push localhost:5000/${imageName}
 
   #Main tests grid. Builds and runs tests agains multiple combination of GC, Build mode and Scala Version
   #It can be extended to test against different OS and Arch settings
