--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -78,8 +78,8 @@ jobs:
       matrix:
         arch: [linux-arm64, linux-x86]
         scala: [2.13.10, 3.2.0]
-        build-mode: [release-fast]
-        lto: [thin]
+        build-mode: [debug, release-fast]
+        lto: [none, thin]
         gc: [boehm, immix, commix]
         # Create holes in grid to lower number of tests.
         # Excluded entries should have low impact on overall project coverage
@@ -96,6 +96,14 @@ jobs:
             arch: linux-x86
           - gc: commix
             arch: linux-x86
+          # Release without LTO produces 1 big file taking long to compile, especially when emulated
+          - build-mode: release-fast
+            lto: none
+          # Reduce ammount of builds combinations
+          - gc: commix
+            scala: 3.2.0
+          - gc: immix
+            scala: 2.13.10
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/linux-setup-env
@@ -121,12 +129,14 @@ jobs:
           SCALANATIVE_MODE: "${{matrix.build-mode}}"
           SCALANATIVE_GC: "${{matrix.gc}}"
           SCALANATIVE_LTO: "${{matrix.lto}}"
+          # Temporaly excluded due to failures in linux-x86,
+          # missing __mulodi4 symbol used in j.l.Math.addExact(Long,Long)
+          # testsExt${{env.project-version}}/test;
           TEST_COMMAND: >
             show sandbox${{env.project-version}}/nativeConfig;
             sandbox${{env.project-version}}/run;
             testsJVM${{env.project-version}}/test;
             tests${{env.project-version}}/test;
-            testsExt${{env.project-version}}/test;
             junitTestOutputsNative${{env.project-version}}/test;
             scalaPartestJunitTests${{env.project-version}}/test
         uses: nick-fields/retry@v2
@@ -134,4 +144,4 @@ jobs:
           timeout_minutes: 180
           max_attempts: 2
           retry_on: error
-          command: printenv && ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}:${{ matrix.arch }}" ${{ matrix.scala }} ${{env.project-version}}
+          command: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}:${{ matrix.arch }}" ${{ matrix.scala }} ${{env.project-version}}
