--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -83,13 +83,13 @@ jobs:
         gc: [boehm, immix, commix]
         # Create holes in grid to lower number of tests.
         # Excluded entries should have low impact on overall project coverage
-        include:
-          - lto: none
-            build-mode: debug
-            arch: linux-arm64
-          - lto: none
-            build-mode: debug
-            arch: linux-x86
+        # include:
+        #   - lto: none
+        #     build-mode: debug
+        #     arch: linux-arm64
+        #   - lto: none
+        #     build-mode: debug
+        #     arch: linux-x86
         exclude:
           # Immix does not suppoort Immix/Commix GCs
           - gc: immix
@@ -100,10 +100,18 @@ jobs:
           - build-mode: release-fast
             lto: none
           # Reduce ammount of builds combinations
-          - gc: commix
-            scala: 3.2.0
+          - gc: immix
+            lto: none
+          - gc: immix
+            build-mode: debug
           - gc: immix
             scala: 2.13.10
+          - gc: commix
+            lto: none
+          - gc: commix
+            build-mode: debug
+          - gc: commix
+            scala: 3.2.0
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/linux-setup-env
