--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -21,8 +21,7 @@ RUN ! $BUILD_DEPS || { \
     && git checkout v1.2.11 \
     && ./configure \
     && make install prefix=$QEMU_LD_PREFIX \
-    && rm -rf /tmp/zlib \
-  }
+    && rm -rf /tmp/zlib }
 
 RUN ! $BUILD_DEPS || { \
   git clone https://github.com/ivmai/bdwgc /tmp/bdwgc \
@@ -35,8 +34,7 @@ RUN ! $BUILD_DEPS || { \
     && ./autogen.sh \
     && ./configure --host $CROSS_TRIPLE \
     && make install prefix=$QEMU_LD_PREFIX \
-    && rm -rf /tmp/bdwgc \
-  }
+    && rm -rf /tmp/bdwgc }
 
 # Switch shell and user to allow for usage of sdk and installed by it binaries 
 SHELL ["/bin/bash", "-c"]
