--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -128,36 +128,54 @@ jobs:
      
       - name: Prepare native config
         shell: bash
-        if: ${{ !contains(matrix.arch, 'linux-x86') }}
-        # We cannot use either `set every nativeConfig ~= _` or `set tests3/nativeConfig ~= _`
-        # Becouse of that we need to build it whole config from scratch
-        # There is no other way for passing compile and linking opts (we ignore deprecated sbt keys)
         # Following envs CROSS_ are always present in docker container
         run: |
-          targetEnv='sys.env("CROSS_TRIPLE")'
-          target='${sys.env("CROSS_TRIPLE")}'
-          crossRoot='${sys.env("CROSS_ROOT")}'
-
-          sysRootFlag="Some(sys.process.stringSeqToProcess(Seq(sys.env(\"CROSS_ROOT\") + \"/bin/\" + sys.env(\"CROSS_TRIPLE\") + \"-gcc\", \"-print-sysroot\")).!!.trim).filter(_.nonEmpty).map(s => List(s\"--sysroot=\${s}\", s\"--gcc-toolchain=${crossRoot}\")).getOrElse(List.empty)"
-          useLdFlg=\"-fuse-ld=lld\"
-          crossOptions="$sysRootFlag ++ List($useLdFlg)"
           buildMode=${{matrix.build-mode}}
           if [[ "$buildMode" == "release-fast" ]]; then 
             buildMode=releaseFast
           fi
 
-          emptyConfig="scalanative.build.NativeConfig.empty"
-          withMode="withMode(scalanative.build.Mode.${buildMode})"
-          withGC="withGC(scalanative.build.GC.${{matrix.gc}})"
-          withLTO="withLTO(scalanative.build.LTO.${{matrix.lto}})"
-          withToolchain="withClang(scalanative.build.Discover.clang()).withClangPP(scalanative.build.Discover.clangpp())"
-          withOpts="withEmbedResources(true).withOptimize(true).withCheck(true).withCheckFatalWarnings(true)"
-          withTarget="withTargetTriple(${targetEnv})"
-          withCompileOpts="withCompileOptions(scalanative.build.Discover.compileOptions() ++ $crossOptions)"
-          withLinkingOpts="withLinkingOptions(scalanative.build.Discover.linkingOptions() ++ $crossOptions)"
-          config="$emptyConfig.$withMode.$withGC.$withLTO.$withToolchain.$withOpts.$withTarget.$withCompileOpts.$withLinkingOpts"
+          SetConfigTemplate=$(cat << EOM
+            nativeConfig ~= { prev =>
+              val sysRoot: List[String] = Option{
+                sys.process.stringSeqToProcess(
+                  Seq(
+                    s"\${sys.env("CROSS_ROOT")}/bin/\${sys.env("CROSS_TRIPLE")}-gcc",
+                    "-print-sysroot"
+                  )
+                ).!!.trim
+              }.filter(_.nonEmpty)
+                .fold(List.empty[String]){ root =>
+                  List(
+                    s"--sysroot=\${root}",
+                    s"--gcc-toolchain=\${sys.env("CROSS_ROOT")}"
+                  )
+                };
 
-          echo set-native-config=set every nativeConfig := ${config} >> $GITHUB_ENV
+              prev
+                .withMode(scalanative.build.Mode.${buildMode})
+                .withGC(scalanative.build.GC.${{matrix.gc}})
+                .withLTO(scalanative.build.LTO.${{matrix.lto}})
+                .withEmbedResources(true)
+                .withOptimize(true)
+                .withCheck(true)
+                .withCheckFatalWarnings(true)
+                .withTargetTriple(sys.env("CROSS_TRIPLE"))
+                .withCompileOptions(
+                  prev.compileOptions ++ sysRoot ++ List("-fuse-ld=lld")
+                )
+                .withLinkingOptions(
+                  prev.linkingOptions ++ sysRoot ++ List("-fuse-ld=lld")
+                )
+            }
+          EOM
+          )
+          
+          if [[ "${{matrix.arch}} == "linux-x86" ]]; then
+            echo set-native-config=nativeConfig ~= identity >> $GITHUB_ENV
+          else
+            echo set-native-config=${SetConfigTemplate} >> $GITHUB_ENV
+          fi
 
       # Conditionally disable some of the tests (Scala 2 only)
       - name: Set filters for partests
@@ -177,8 +195,13 @@ jobs:
           # missing __mulodi4 symbol used in j.l.Math.addExact(Long,Long)
           # testsExt${{env.project-version}}/test;
           TEST_COMMAND: >
-            ${{env.set-native-config}};
+            set sandbox.forBinaryVersion("${{env.binary-version}}")/${{env.set-native-config}};
+            set tests.forBinaryVersion("${{env.binary-version}}")/${{env.set-native-config}};
+            set junitTestOutputsNative.forBinaryVersion("${{env.binary-version}}")/${{env.set-native-config}};
+            set scalaPartestJunitTests.forBinaryVersion("${{env.binary-version}}")/${{env.set-native-config}};
+
             show sandbox${{env.project-version}}/nativeConfig;
+
             sandbox${{env.project-version}}/run;
             testsJVM${{env.project-version}}/test;
             tests${{env.project-version}}/test;
