--- a/.github/actions/windows-setup-env/action.yml
+++ b/.github/actions/windows-setup-env/action.yml
@@ -32,10 +32,10 @@ runs:
       id: resolve-env
       shell: pwsh
       run: |
-        echo "::set-output name=ProgramFiles::${env:ProgramFiles}"
-        echo "::set-output name=LocalAppData::${env:LocalAppData}"
-        echo "::set-output name=UserProfile::${env:UserProfile}"
-        echo "::set-output name=VcpkgLibs::${env:VCPKG_INSTALLATION_ROOT}\installed\x64-windows-static"
+        "ProgramFiles=${env:ProgramFiles}" >> $env:GITHUB_OUTPUT
+        "LocalAppData=${env:LocalAppData}" >> $env:GITHUB_OUTPUT
+        "UserProfile=${env:UserProfile}" >> $env:GITHUB_OUTPUT
+        "VcpkgLibs=${env:VCPKG_INSTALLATION_ROOT}\installed\x64-windows-static" >> $env:GITHUB_OUTPUT
         if ("${{inputs.scala-version}}".StartsWith("2.")) {
           echo ("project-version=" + ("${{inputs.scala-version}}".Split(".")[0, 1] -join "_")) >> $env:GITHUB_ENV
         } else {
@@ -44,7 +44,7 @@ runs:
 
     - name: Cache dependencies
       id: cache-deps
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: |
           ${{steps.resolve-env.outputs.ProgramFiles}}\LLVM\
