--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.0, 2.13.10]
+        scala: [3.2.1, 2.13.10]
         gc: [boehm, immix, commix]
         include: 
         - scala: 2.11.12
@@ -74,11 +74,10 @@ jobs:
 
   run-scripted-tests:
     name: Scripted tests
-    runs-on: ${{matrix.os}}
+    runs-on: windows-2019
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019]
         scala: [2.12.17, 3.1.3]
     steps:
       # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
@@ -99,12 +98,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.0, 2.13.10]
+        scala: [3.2.1, 2.13.10]
         build-mode: [release-fast]
         lto: [thin]
         optimize: [true]
         include:
-          - scala: 3.2.0
+          - scala: 3.2.1
             lto: full
             optimize: true
           - scala: 2.13.10
