Remove shebang from scala-cli scripts due to failures in scalafmt (#2961)
* Remove sheband from scala-cli script

* update scalafmt overrides

* run scalafmt in non-interactive mode to limit ammont of logs

* Revert "run scalafmt in non-interactive mode to limit ammont of logs"

This reverts commit 421ace2742be3ec22383bc9d2be20f2bb429a2a5.

* try fix fialing scalafmt test

(cherry picked from commit 76bec79ea94f9c4ab7714fbab40a491f99dcf0d9)

--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -39,7 +39,7 @@ jobs:
           sbt "++ ${{ matrix.scala }} -v" \
           "-no-colors" \
           "scalaPartest${{env.project-version}}/fetchScalaSource"
-          ./scripts/partest-check-files.scala ${{ matrix.scala }}
+          scala-cli scripts/partest-check-files.scala -- ${{ matrix.scala }}
 
         # Running all partests would take ~2h for each Scala version, run only single test of each kind
         # to make sure that infrastructure works correctly.
