Remove -XX:MaxMetaspaceSize flag in scripted tests due to CI failures A few java.net.Inet*Address fixes (#2877)
* Workaround missing gai_strerror() on Windows
* Re-work InetAddressTest isReachable to avoid Windows specific condition
* Explore getnameinfo() SEGV problem
* Better handling of numeric host storage in getAllByName()

(cherry picked from commit 75b2d6f05af97e5956b493ad27f19a64e6ea2c19)

Fix mima binary incompatibilites
Run scalafmt and fix workflows

--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -20,7 +20,7 @@ jobs:
       image-name: ${{ steps.build-image.outputs.image-base-name }}
     strategy:
       matrix:
-        arch: [linux-arm64, linux-x86]
+        arch: [linux-arm64]
 
     steps:
       - uses: actions/checkout@v3
@@ -160,11 +160,7 @@ jobs:
           EOM
           )
 
-          if [[ "${{matrix.arch}}" == "linux-x86" ]]; then
-            echo set-native-config=nativeConfig ~= identity >> $GITHUB_ENV
-          else
-            echo set-native-config=${SetConfigTemplate} >> $GITHUB_ENV
-          fi
+          echo set-native-config=${SetConfigTemplate} >> $GITHUB_ENV
 
       # Conditionally disable some of the tests (Scala 2 only)
       - name: Set filters for partests
@@ -180,9 +176,6 @@ jobs:
           SCALANATIVE_MODE: "${{matrix.build-mode}}"
           SCALANATIVE_GC: "${{matrix.gc}}"
           SCALANATIVE_LTO: "${{matrix.lto}}"
-          # Temporaly excluded due to failures in linux-x86,
-          # missing __mulodi4 symbol used in j.l.Math.addExact(Long,Long)
-          # testsExt${{env.project-version}}/test;
           TEST_COMMAND: >
             set sandbox.forBinaryVersion("${{env.binary-version}}")/${{env.set-native-config}};
             set tests.forBinaryVersion("${{env.binary-version}}")/${{env.set-native-config}};
