--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -91,6 +91,15 @@ jobs:
         with:
           scala-version: ${{matrix.scala}}
 
+      # Install LLVM 14 for build-library-static test
+      - name: Install LLVM
+        shell: pwsh
+        run: choco install llvm --version=14.0.0 --allow-downgrade
+
+      - name: Add LLVM on Path
+        shell: pwsh
+        run: echo "${env:ProgramFiles}\LLVM\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
       - name: Test scripted
         run: sbt "++${{matrix.scala}}" "test-scripted ${{matrix.scala}}"
         shell: cmd
