--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -80,7 +80,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019]
+        os: [windows-2022]
         scala: [2.12.17, 3.1.3]
     steps:
       # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
@@ -91,17 +91,10 @@ jobs:
         with:
           scala-version: ${{matrix.scala}}
 
-      # Install LLVM 14 for build-library-static test
-      - name: Install LLVM
-        shell: pwsh
-        run: choco install llvm --version=14.0.0 --allow-downgrade
-
-      - name: Add LLVM on Path
-        shell: pwsh
-        run: echo "${env:ProgramFiles}\LLVM\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-
       - name: Test scripted
-        run: sbt "++${{matrix.scala}}" "test-scripted ${{matrix.scala}}"
+        run: |
+          clang --version
+          sbt "++${{matrix.scala}}" "test-scripted ${{matrix.scala}}"
         shell: cmd
 
   test-runtime-lto:
