--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -193,5 +193,8 @@ jobs:
           SCALANATIVE_MODE: release-fast
           SCALANATIVE_GC: immix
           SCALANATIVE_OPTIMIZE: true
-          LLVM_BIN: /usr/lib/llvm-14/bin/
-        run: sbt "test-scripted ${{matrix.scala}}"
+          LLVM_BIN: /usr/lib/llvm-14/bin
+        run: |
+          ls ${LLVM_BIN}
+          ${LLVM_BIN}/clang --version
+          sbt "test-scripted ${{matrix.scala}}"
