Allow to link as dynamic library (#2145)
* Bootstrap support for building shared library in config
* Allow linking to shared library
* Add shared library scripted test
* Add compile time checks and tests
* Sync Scala 3 compiler plugin with Scala 2
* Generate dllexport modifiers for exported symbols on Windows
* Generate gxx personality for externs
* Restrict generation of dllexport only to Sig.Extern names
* Check if new compilation flags fix exception on mac
* Add mixxing isMac method in scirpted Platform
* Generate dylib constructor to init ScalaNative
* Set lib prefix for library outputs
* Allow to produce static libraries
* Build static library using llvm-ar directly
* Don't allow to generate '.ll' file with empty basename
* Upgrade al-cheb/configure-pagefile-action to remove CI warnings
Co-authored-by: adampauls <adpauls@microsoft.com>

--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -184,4 +184,6 @@ jobs:
           SCALANATIVE_MODE: release-fast
           SCALANATIVE_GC: immix
           SCALANATIVE_OPTIMIZE: true
-        run: sbt "test-scripted ${{matrix.scala}}"
+        run: |
+          export LLVM_BIN=$(dirname $(readlink -f /usr/bin/clang))
+          sbt "test-scripted ${{matrix.scala}}"
